[BI-152] fixed overflow on the course home page [LMS][CMS] (#925)

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -3826,3 +3826,8 @@ body .account-settings-sections .section .account-settings-section-body .u-field
         padding-bottom: 25px;
     }
 }
+
+.updates-article,
+div.info-wrapper section.handouts {
+    word-wrap: break-word;
+}
